# PDFReader

./: CMakeLists.txt  README.md
pdfreader/: entry.qml  metadata.desktop
pdfreader/pdfjs/web/: viewer.css  viewer.html  viewer.js  viewer.js.map
